# Vision

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SPEC.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.dot  architecture.mmd
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: holdings-row.tsx  metric-card.tsx
frontend/src/lib/: api.ts  chart-utils.ts  types.ts
tasks/: plan.md  todo.md
tests/api/: conftest.py  test_error_handling.py  test_factor_endpoints.py  test_health.py  test_integration_flow.py  test_market_data_endpoints.py  test_optimization_endpoints.py  test_portfolio_endpoints.py  test_risk_endpoints.py
tests/integration/: test_database.py  test_portfolio_repository.py  test_riskfolio_adapter.py
tests/unit/application/: test_optimization_service.py
tests/unit/domain/: test_factor_services.py  test_market_data_models.py  test_market_data_services.py  test_optimization_models.py  test_portfolio_models.py  test_portfolio_services.py  test_portfolio_valuation.py  test_risk_services.py
vision/: config.py
vision/api/: app.py  dependencies.py  middleware.py
vision/api/routers/: factors.py  market_data.py  optimization.py  portfolios.py  risk.py
vision/application/: factor_service.py  market_data_service.py  optimization_service.py  portfolio_service.py  risk_service.py
vision/domain/factor/: models.py  services.py
vision/domain/market_data/: models.py  repository.py  (+1 more)
(+29 files in other folders)
