[project]
name = "vision"
version = "0.1.0"
description = "Portfolio Construction & Analytics Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "yfinance>=0.2.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "statsmodels>=0.14.0",
    "riskfolio-lib>=6.0.0",
    "empyrical-reloaded>=0.5.0",
    "pytest>=9.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Fast tests with no I/O",
    "integration: Tests using real database or network",
    "slow: Tests requiring network calls",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["yfinance", "empyrical", "riskfolio", "riskfolio.*", "pandas", "statsmodels", "statsmodels.*"]
ignore_missing_imports = true
